style: reduce tab height while keeping width for long text and fix visual alignment

--- a/src/components/tabs/style.css
+++ b/src/components/tabs/style.css
@@ -1,16 +1,9 @@
 .tabs {
 	display: flex;
-	justify-content: flex-start;
+	justify-content: center;
 	border-bottom: 1px solid black;
 	margin-bottom: 0rem;
 	padding-left: 5px;
-	overflow-x: auto;
-	flex-wrap: nowrap;
-	scrollbar-width: none; /* pro Firefox */
-}
-
-.tabs::-webkit-scrollbar {
-    display: none; /* pro Chrome, Safari a Operu */
 }
 
 .tab {
@@ -18,7 +11,7 @@
 	color: black;
 	border: 1px solid black;
 	border-bottom: 1px solid white;
-	padding: 15px 35px;
+	padding: 10px 45px;
 	margin-bottom: -1px;
 	cursor: pointer;
 	border-radius: 10px 10px 0 0;
@@ -26,8 +19,6 @@
     align-items: center;     /* Vertikální zarovnání */
 	display: flex;
 	font-weight: bold;
-	min-width: 100px;
-	white-space: nowrap;
 }
 
 .tab + .tab {
